--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stitches/react": "^1.2.8",
     "axios": "^1.5.1",
     "howler": "^2.2.4",
+    "projetorpg-frontend2": "file:",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
