--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.5.1",
     "firebase": "^10.13.1",
     "howler": "^2.2.4",
+    "peerjs": "^1.5.4",
     "projetorpg-frontend2": "file:",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
