--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@nextui-org/react": "^2.4.8",
     "@stitches/react": "^1.2.8",
     "axios": "^1.5.1",
     "firebase": "^10.13.1",
+    "framer-motion": "^11.5.5",
     "howler": "^2.2.4",
     "peerjs": "^1.5.4",
     "projetorpg-frontend2": "file:",
@@ -28,10 +30,13 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.12",
     "vite": "^4.4.5"
   }
 }
